--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/dbmatricula
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://b2232d0e0ff18d:6cdcaa36@us-cdbr-iron-east-03.cleardb.net/heroku_1bc59ade042a3b7?reconnect=true
+spring.datasource.username=b2232d0e0ff18d
+spring.datasource.password=6cdcaa36
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
